Source/ISS/Development/PawsSupport/Devices/Bus_1553/Atlas/Remote PC test software/Include/BTICARD.H

typedef void VOID;
typedef int INT;
typedef int * LPINT;
typedef unsigned short USHORT;
typedef unsigned short * LPUSHORT;
typedef unsigned long ULONG;
typedef unsigned long * LPULONG;
typedef const char * LPCSTR;
typedef int BOOL;
typedef void * HCARD;
typedef int HCARD;
typedef void ** LPHCARD;
typedef int * LPHCARD;
typedef void * HCORE;
typedef int HCORE;
typedef int ERRVAL;
/**
*
*  BTICard Driver functions.
*
**/

BTICardAPI VOID __stdcall BTICard_Add64(LPULONG resulth,LPULONG resultl,ULONG valah,ULONG valal,ULONG valbh,ULONG valbl);
BTICardAPI ULONG __stdcall BTICard_AddrDSP(ULONG addr,HCARD handleval);
BTICardAPI ULONG __stdcall BTICard_AddrHost(ULONG addr,HCARD handleval);
BTICardAPI ERRVAL __stdcall BTICard_AsciiToMant(LPCSTR str,LPULONG mant,LPINT exp);
BTICardAPI ULONG __stdcall BTICard_BCDToBin(ULONG bcdval,INT msb,INT lsb);
BTICardAPI ULONG __stdcall BTICard_BinToBCD(ULONG oldbcdval,ULONG binval,INT msb,INT lsb);
BTICardAPI ERRVAL __stdcall BTICard_BITConfig(ULONG configval,HCORE handleval);
BTICardAPI ERRVAL __stdcall BTICard_BITInitiate(HCORE handleval);
BTICardAPI ERRVAL __stdcall BTICard_BITStatusClear(ULONG statval,HCORE handleval);
BTICardAPI ULONG __stdcall BTICard_BITStatusRd(HCORE handleval);
BTICardAPI ERRVAL __stdcall BTICard_CardClose(HCARD handleval);
BTICardAPI ERRVAL __stdcall BTICard_CardCloseAll(VOID);
BTICardAPI ULONG __stdcall BTICard_CardGetInfo(USHORT infotype,INT channum,HCORE handleval);
BTICardAPI ERRVAL __stdcall BTICard_CardGetInfoEx(LPUSHORT bufmodel,USHORT bufmodelcount,LPUSHORT buffeature,USHORT buffeaturecount,HCORE handleval);
BTICardAPI BOOL __stdcall BTICard_CardIsRunning(HCORE handleval);
BTICardAPI ERRVAL __stdcall BTICard_CardNop(HCARD handleval);
BTICardAPI ERRVAL __stdcall BTICard_CardOpen(LPHCARD lpHandle,INT cardnum);
BTICardAPI ERRVAL __stdcall BTICard_CardOpenStr(LPHCARD lpHandle,LPCSTR cardstr);
BTICardAPI LPCSTR __stdcall BTICard_CardProductStr(HCORE handleval);
BTICardAPI LPCSTR __stdcall BTICard_CardReserveRd(HCORE handleval);
BTICardAPI ERRVAL __stdcall BTICard_CardReserveWr(LPCSTR str,HCORE handleval);
BTICardAPI VOID __stdcall BTICard_CardReset(HCORE handleval);
BTICardAPI VOID __stdcall BTICard_CardResetEx(HCORE handleval);
BTICardAPI ERRVAL __stdcall BTICard_CardResume(HCORE handleval);
BTICardAPI ERRVAL __stdcall BTICard_CardShadow(BOOL shadowval,HCORE handleval);
BTICardAPI ERRVAL __stdcall BTICard_CardStart(HCORE handleval);
BTICardAPI BOOL __stdcall BTICard_CardStop(HCORE handleval);
BTICardAPI VOID __stdcall BTICard_CardSyncEnable(BOOL enableflag,USHORT syncmask,USHORT pinpolarity,HCORE handleval);
BTICardAPI USHORT __stdcall BTICard_CardSyncValid(HCORE handleval);
BTICardAPI ERRVAL __stdcall BTICard_CardSyncValidEx(LPUSHORT maskout,USHORT maskin,HCORE handleval);
BTICardAPI ERRVAL __stdcall BTICard_CardTest(USHORT level,HCORE handleval);
BTICardAPI ERRVAL __stdcall BTICard_CardTest0(HCORE handleval);
BTICardAPI ERRVAL __stdcall BTICard_CardTest1(HCORE handleval);
BTICardAPI ERRVAL __stdcall BTICard_CardTest2(HCORE handleval);
BTICardAPI ERRVAL __stdcall BTICard_CardTest3(HCORE handleval);
BTICardAPI VOID __stdcall BTICard_CardTrigger(HCORE handleval);
BTICardAPI VOID __stdcall BTICard_CardTriggerEnable(BOOL enableflag,HCORE handleval);
BTICardAPI VOID __stdcall BTICard_CardTriggerEnableEx(BOOL enableflag,USHORT trigmask,USHORT pinpolarity,HCORE handleval);
BTICardAPI VOID __stdcall BTICard_CardTriggerEx(USHORT trigmask,HCORE handleval);
BTICardAPI USHORT __stdcall BTICard_CardTriggerValid(HCORE handleval);
BTICardAPI ERRVAL __stdcall BTICard_CardTriggerValidEx(LPUSHORT maskout,USHORT maskin,HCORE handleval);
BTICardAPI LPCSTR __stdcall BTICard_CardTypeStr(HCORE handleval);
BTICardAPI VOID __stdcall BTICard_ChDARClr(USHORT maskval,USHORT addrval,INT channum,HCORE handleval);
BTICardAPI BOOL __stdcall BTICard_ChDARGet(USHORT maskval,USHORT addrval,INT channum,HCORE handleval);
BTICardAPI ULONG __stdcall BTICard_ChDARRdL(USHORT addrval,INT channum,HCORE handleval);
BTICardAPI VOID __stdcall BTICard_ChDARRdsW(LPUSHORT valueptr,USHORT addrval,INT countval,INT channum,HCORE handleval);
BTICardAPI USHORT __stdcall BTICard_ChDARRdW(USHORT addrval,INT channum,HCORE handleval);