Source/ISS/Development/PawsSupport/Devices/Bus_1553/Atlas/Remote PC test software/Include/BTICARDNET.CS


        private static class BTICARD_32
        {
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_Add64@24", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTICard_Add64(ref UInt32 resulth, ref UInt32 resultl, UInt32 valah, UInt32 valal, UInt32 valbh, UInt32 valbl);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_AddrDSP@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTICard_AddrDSP(UInt32 addr, IntPtr handleval);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_AddrHost@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTICard_AddrHost(UInt32 addr, IntPtr handleval);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_AsciiToMant@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICard_AsciiToMant(ref string str, ref UInt32 mant, ref Int32 exp);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_BCDToBin@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTICard_BCDToBin(UInt32 bcdval, Int32 msb, Int32 lsb);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_BinToBCD@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTICard_BinToBCD(UInt32 oldbcdval, UInt32 binval, Int32 msb, Int32 lsb);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_BITConfig@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICard_BITConfig(UInt32 configval, IntPtr handleval);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_BITInitiate@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICard_BITInitiate(IntPtr handleval);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_BITStatusClear@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICard_BITStatusClear(UInt32 statval, IntPtr handleval);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_BITStatusRd@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTICard_BITStatusRd(IntPtr handleval);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_CardClose@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICard_CardClose(IntPtr handleval);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_CardCloseAll@0", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICard_CardCloseAll();
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_CardGetInfo@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTICard_CardGetInfo(UInt16 infotype, Int32 channum, IntPtr handleval);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_CardGetInfoEx@20", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICard_CardGetInfoEx(ref UInt16 bufmodel, UInt16 bufmodelcount, ref UInt16 buffeature, UInt16 buffeaturecount, IntPtr handleval);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_CardIsRunning@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICard_CardIsRunning(IntPtr handleval);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_CardNop@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICard_CardNop(IntPtr handleval);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_CardOpen@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICard_CardOpen(ref IntPtr lphandle, Int32 cardnum);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_CardOpenStr@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICard_CardOpenStr(ref IntPtr lphandle, ref string cardstr);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_CardProductStr@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern IntPtr _BTICard_CardProductStr(IntPtr handleval);
            public static string BTICard_CardProductStr(IntPtr handleval) { return Marshal.PtrToStringAnsi(_BTICard_CardProductStr(handleval)); }
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_CardReserveRd@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern IntPtr _BTICard_CardReserveRd(IntPtr handleval);
            public static string BTICard_CardReserveRd(IntPtr handleval) { return Marshal.PtrToStringAnsi(_BTICard_CardReserveRd(handleval)); }
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_CardReserveWr@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICard_CardReserveWr(ref string str, IntPtr handleval);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_CardReset@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTICard_CardReset(IntPtr handleval);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_CardResetEx@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTICard_CardResetEx(IntPtr handleval);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_CardResume@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICard_CardResume(IntPtr handleval);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_CardShadow@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICard_CardShadow(Int32 shadowval, IntPtr handleval);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_CardStart@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICard_CardStart(IntPtr handleval);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_CardStop@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICard_CardStop(IntPtr handleval);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_CardSyncEnable@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTICard_CardSyncEnable(Int32 enableflag, UInt16 syncmask, UInt16 pinpolarity, IntPtr handleval);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_CardSyncValid@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt16 BTICard_CardSyncValid(IntPtr handleval);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_CardSyncValidEx@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICard_CardSyncValidEx(ref UInt16 maskout, UInt16 maskin, IntPtr handleval);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_CardTest@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICard_CardTest(UInt16 level, IntPtr handleval);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_CardTest0@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICard_CardTest0(IntPtr handleval);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_CardTest1@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICard_CardTest1(IntPtr handleval);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_CardTest2@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICard_CardTest2(IntPtr handleval);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_CardTest3@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICard_CardTest3(IntPtr handleval);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_CardTrigger@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTICard_CardTrigger(IntPtr handleval);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_CardTriggerEnable@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTICard_CardTriggerEnable(Int32 enableflag, IntPtr handleval);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_CardTriggerEnableEx@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTICard_CardTriggerEnableEx(Int32 enableflag, UInt16 trigmask, UInt16 pinpolarity, IntPtr handleval);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_CardTriggerEx@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTICard_CardTriggerEx(UInt16 trigmask, IntPtr handleval);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_CardTriggerValid@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt16 BTICard_CardTriggerValid(IntPtr handleval);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_CardTriggerValidEx@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICard_CardTriggerValidEx(ref UInt16 maskout, UInt16 maskin, IntPtr handleval);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_CardTypeStr@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern IntPtr _BTICard_CardTypeStr(IntPtr handleval);
            public static string BTICard_CardTypeStr(IntPtr handleval) { return Marshal.PtrToStringAnsi(_BTICard_CardTypeStr(handleval)); }
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_ChDARClr@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTICard_ChDARClr(UInt16 maskval, UInt16 addrval, Int32 channum, IntPtr handleval);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_ChDARGet@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICard_ChDARGet(UInt16 maskval, UInt16 addrval, Int32 channum, IntPtr handleval);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_ChDARRdL@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTICard_ChDARRdL(UInt16 addrval, Int32 channum, IntPtr handleval);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_ChDARRdsW@20", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTICard_ChDARRdsW(UInt16[] valueptr, UInt16 addrval, Int32 countval, Int32 channum, IntPtr handleval);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_ChDARRdW@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt16 BTICard_ChDARRdW(UInt16 addrval, Int32 channum, IntPtr handleval);
